home page layout and css

--- a/antora-ui.yml
+++ b/antora-ui.yml
@@ -1,4 +1,11 @@
 sources:
   - path: '@antora/antora-ui-default'
   - path: ./
+
+css:
+  - site.css
+  - home.css
+
+#preview: true
+
 bundle-name: tomee-antora-ui
